// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a plaintext text block 1`] = `
<div
  className="css-795pei-TextElement"
>
  <span
    className="css-1guhjp7"
    onClick={[Function]}
  >
    Hello World!
  </span>
</div>
`;

exports[`Text renders a text block with custom styles 1`] = `
<div
  className="css-795pei-TextElement"
>
  <span
    className="css-1guhjp7"
    onClick={[Function]}
  >
    Hello World!
  </span>
</div>
`;

exports[`Text renders an empty text block 1`] = `
<div
  className="css-795pei-TextElement"
>
  <span
    className="css-1guhjp7"
    onClick={[Function]}
  >
    

  </span>
</div>
`;
